k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:17.4-alpine3.21
        ports:
        - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql
  ports:
  - port: 5432
    targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubenews
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubenews
  template:
    metadata:
      labels:
        app: kubenews
    spec:
      containers:
      - name: kubenews
        image: vinny6202/kube_news
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: kube-app
spec:
  selector:
    app: kubenews
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
