k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.vinnycloud.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-app
            port: 
              number: 80
